Scrollable: fix scrolling broken on iOS 8 in some conditions. Fixes #338

--- a/Scrollable/themes/ios/Scrollable.css
+++ b/Scrollable/themes/ios/Scrollable.css
@@ -2,8 +2,6 @@
   display: block;
   /* enable momentum: */
   -webkit-overflow-scrolling: touch;
-  /* enable hardware acceleration: */
-  -webkit-transform: translate3d(0, 0, 0);
 }
 .d-scrollable-h {
   /* enable horizontal scrolling: */
